tests/src/snapshots/fe_compiler_tests__compile_errors__array_mixed_types.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: type mismatch
  ┌─ [snippet]:3:19
  │
3 │   x: u16[3] = [1, address(0), "hi"]
  │                   ^^^^^^^^^^ this has type `address`; expected type `u16`

error: type mismatch
  ┌─ [snippet]:3:31
  │
3 │   x: u16[3] = [1, address(0), "hi"]
  │                               ^^^^ this has type `String<2>`; expected type `u16`


